--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,8 @@ body{
     font-style: normal;
     text-align: center;
     letter-spacing: 0.06em;
+    border: none;
+    color: var(--white-color);
 }
 .button-order:active{
     background-color: #188CE8;
