--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body{
     cursor: pointer;
 }
 .button-order{
-    width: 216px;
+    min-width: 216px;
     height: 50px;
     background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -135,6 +135,7 @@ body{
     letter-spacing: 0.06em;
     border: none;
     color: var(--white-color);
+    padding: 10px 32px;
 }
 .button-order:active{
     background-color: #188CE8;
@@ -266,7 +267,7 @@ body{
     column-gap: 30px;
     /* list-style: none; */
     /* flex-flow: row; */
-    /* justify-content: space-around; */
+    /* justify-content: space-between; */
 }
 .adv-list-item{
     flex-basis: calc((100%-90px)/4);
